Changes towards version 0.4:
- Bay door animations don't stall before aborting (bug #500), from 
  chmmravatar
- Reports SDL version on startup (bug #520) - Mika,Nic
- Fuel usage on planet landing is now reported correctly on all situations
  (bug #556), from Nic
- Fine-grained control of menu sounds, "MenuSounds" global now 
  guaranteed to always be non-null  -Michael
- Added support for stdio file access through temporary files to uio.
  added uio_copyFile to uio - SvdB
- Added uio_getFileLocation() and uio_getMountFileSystemType() to uio.
  Also some small improvements. - SvdB
- Fixed fuel usage estimate to selected destination on the starmap.
  (original bug, not reported) - SvdB
- Sound decoders refactoring: decoders are now virtualized,
  the high-level decoding code is unified and any format is
  theoretically streamable -Alex
- Patches to enforce the invariant that the GraphicsLock is held when 
  SetFlashRect is called (bug #504) -Michael
- Major refactoring of threadlib; see doc/devel/threads -Michael
- Downgraded the GraphicsLock to an ordinary Mutex -Michael
- Added movie player; only movies defined are intro and ending;
  only .duk decoder present (.duk audio decoder mostly derived
  from decoder by SvdB) -Alex
- Extra fallback for the unlikely situation that $HOME isn't set on a
  unix system. (#493) - SvdB
- Accept spaces in --contentdir argument (#492) - SvdB
- Separated and abstracted sound buffer-tagging and trackplayer
  clip/subtitle chaining -Alex
- Abstracted the recursive mutexes in MixSDL and DCQ code -Michael
- Introduced a new synchronization construct (CrossThreadMutex) and 
  migrated the GraphicsSem and clock_sem over to it (#359) -Michael
- Replaced thread-local Semaphores with Mutexes (#359) -Michael
- Load/save icons don't flash anymore when in savegame menu
  (part of bug #291), from Paxtez
- Savegame slot now defaults to the last one used during one execution
  of uqm (bug #477), from chmmravatar